# mouseMapper

./: Cargo.toml
src/: config.rs  main.rs
src/device/: mod.rs  reader.rs  scanner.rs  writer.rs
src/engine/: macros.rs  mapper.rs  mod.rs
src/tui/: app.rs  mod.rs  widgets.rs
src/tui/tabs/: bindings.rs  devices.rs  macros.rs  mod.rs  monitor.rs
