[package]
name = "mouse-mapper"
version = "0.1.0"
edition = "2024"
description = "Linux mouse button remapper and macro engine with TUI"

[dependencies]
# Input device handling
evdev = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.30"
crossterm = "0.29"

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Utility
anyhow = "1"
log = "0.4"
env_logger = "0.11"
libc = "0.2"
dirs = "6"
rand = "0.8"
